Generated/LinguagemParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gramatica/Linguagem.g4 by ANTLR 4.13.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.0")]
[System.CLSCompliant(false)]
public partial class LinguagemParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		INTEIRO=1, FLOAT=2, CHAR=3, TEXTO=4, RETURN=5, SE=6, SENAO=7, ENQUANTO=8, 
		LEIA=9, ESCREVA=10, CLASSE=11, MAIS=12, MENOS=13, MULT=14, DIV=15, IGUAL=16, 
		MAIOR=17, MENOR=18, MAIOR_IGUAL=19, MENOR_IGUAL=20, IGUAL_IGUAL=21, DIFERENTE=22, 
		ABRE_PAREN=23, FECHA_PAREN=24, ABRE_CHAVE=25, FECHA_CHAVE=26, ABRE_COLCH=27, 
		FECHA_COLCH=28, PONTO_VIRGULA=29, VIRGULA=30, ID=31, INT=32, FLOAT_LITERAL=33, 
		CHAR_LITERAL=34, STRING_LITERAL=35, ESPACO=36, COMENTARIO=37;
	public const int
		RULE_programa = 0, RULE_declaracao = 1, RULE_comando = 2, RULE_atribuicao = 3, 
		RULE_leitura = 4, RULE_escrita = 5, RULE_decisao = 6, RULE_repeticao = 7, 
		RULE_retorno = 8, RULE_funcao = 9, RULE_parametros = 10, RULE_parametro = 11, 
		RULE_chamadaFuncao = 12, RULE_chamadaFuncaoExpr = 13, RULE_classe = 14, 
		RULE_bloco = 15, RULE_expressao = 16, RULE_tipo = 17;
	public static readonly string[] ruleNames = {
		"programa", "declaracao", "comando", "atribuicao", "leitura", "escrita", 
		"decisao", "repeticao", "retorno", "funcao", "parametros", "parametro", 
		"chamadaFuncao", "chamadaFuncaoExpr", "classe", "bloco", "expressao", 
		"tipo"
	};

	private static readonly string[] _LiteralNames = {
		null, "'inteiro'", "'float'", "'char'", "'texto'", "'return'", "'se'", 
		"'senao'", "'enquanto'", "'leia'", "'escreva'", "'classe'", "'+'", "'-'", 
		"'*'", "'/'", "'='", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "';'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INTEIRO", "FLOAT", "CHAR", "TEXTO", "RETURN", "SE", "SENAO", "ENQUANTO", 
		"LEIA", "ESCREVA", "CLASSE", "MAIS", "MENOS", "MULT", "DIV", "IGUAL", 
		"MAIOR", "MENOR", "MAIOR_IGUAL", "MENOR_IGUAL", "IGUAL_IGUAL", "DIFERENTE", 
		"ABRE_PAREN", "FECHA_PAREN", "ABRE_CHAVE", "FECHA_CHAVE", "ABRE_COLCH", 
		"FECHA_COLCH", "PONTO_VIRGULA", "VIRGULA", "ID", "INT", "FLOAT_LITERAL", 
		"CHAR_LITERAL", "STRING_LITERAL", "ESPACO", "COMENTARIO"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Linguagem.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LinguagemParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LinguagemParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LinguagemParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LinguagemParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ComandoContext[] comando() {
			return GetRuleContexts<ComandoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComandoContext comando(int i) {
			return GetRuleContext<ComandoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracaoContext[] declaracao() {
			return GetRuleContexts<DeclaracaoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracaoContext declaracao(int i) {
			return GetRuleContext<DeclaracaoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncaoContext[] funcao() {
			return GetRuleContexts<FuncaoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncaoContext funcao(int i) {
			return GetRuleContext<FuncaoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClasseContext[] classe() {
			return GetRuleContexts<ClasseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClasseContext classe(int i) {
			return GetRuleContext<ClasseContext>(i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(Context, State);
		EnterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147487614L) != 0)) {
				{
				State = 40;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 36;
					comando();
					}
					break;
				case 2:
					{
					State = 37;
					declaracao();
					}
					break;
				case 3:
					{
					State = 38;
					funcao();
					}
					break;
				case 4:
					{
					State = 39;
					classe();
					}
					break;
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 45;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaracaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LinguagemParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PONTO_VIRGULA() { return GetToken(LinguagemParser.PONTO_VIRGULA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_COLCH() { return GetToken(LinguagemParser.ABRE_COLCH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(LinguagemParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_COLCH() { return GetToken(LinguagemParser.FECHA_COLCH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IGUAL() { return GetToken(LinguagemParser.IGUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterDeclaracao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitDeclaracao(this);
		}
	}

	[RuleVersion(0)]
	public DeclaracaoContext declaracao() {
		DeclaracaoContext _localctx = new DeclaracaoContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaracao);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			tipo();
			State = 48;
			Match(ID);
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ABRE_COLCH) {
				{
				State = 49;
				Match(ABRE_COLCH);
				State = 50;
				Match(INT);
				State = 51;
				Match(FECHA_COLCH);
				}
			}

			State = 56;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IGUAL) {
				{
				State = 54;
				Match(IGUAL);
				State = 55;
				expressao(0);
				}
			}

			State = 58;
			Match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComandoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtribuicaoContext atribuicao() {
			return GetRuleContext<AtribuicaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LeituraContext leitura() {
			return GetRuleContext<LeituraContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EscritaContext escrita() {
			return GetRuleContext<EscritaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DecisaoContext decisao() {
			return GetRuleContext<DecisaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RepeticaoContext repeticao() {
			return GetRuleContext<RepeticaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ChamadaFuncaoContext chamadaFuncao() {
			return GetRuleContext<ChamadaFuncaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RetornoContext retorno() {
			return GetRuleContext<RetornoContext>(0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comando; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterComando(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitComando(this);
		}
	}

	[RuleVersion(0)]
	public ComandoContext comando() {
		ComandoContext _localctx = new ComandoContext(Context, State);
		EnterRule(_localctx, 4, RULE_comando);
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				atribuicao();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				leitura();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 62;
				escrita();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 63;
				decisao();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 64;
				repeticao();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 65;
				chamadaFuncao();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 66;
				retorno();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtribuicaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IGUAL() { return GetToken(LinguagemParser.IGUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PONTO_VIRGULA() { return GetToken(LinguagemParser.PONTO_VIRGULA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LinguagemParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_COLCH() { return GetToken(LinguagemParser.ABRE_COLCH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(LinguagemParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_COLCH() { return GetToken(LinguagemParser.FECHA_COLCH, 0); }
		public AtribuicaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atribuicao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterAtribuicao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitAtribuicao(this);
		}
	}

	[RuleVersion(0)]
	public AtribuicaoContext atribuicao() {
		AtribuicaoContext _localctx = new AtribuicaoContext(Context, State);
		EnterRule(_localctx, 6, RULE_atribuicao);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 69;
				Match(ID);
				}
				break;
			case 2:
				{
				State = 70;
				Match(ID);
				State = 71;
				Match(ABRE_COLCH);
				State = 72;
				Match(INT);
				State = 73;
				Match(FECHA_COLCH);
				}
				break;
			}
			State = 76;
			Match(IGUAL);
			State = 77;
			expressao(0);
			State = 78;
			Match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LeituraContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEIA() { return GetToken(LinguagemParser.LEIA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_PAREN() { return GetToken(LinguagemParser.ABRE_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LinguagemParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_PAREN() { return GetToken(LinguagemParser.FECHA_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PONTO_VIRGULA() { return GetToken(LinguagemParser.PONTO_VIRGULA, 0); }
		public LeituraContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_leitura; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterLeitura(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitLeitura(this);
		}
	}

	[RuleVersion(0)]
	public LeituraContext leitura() {
		LeituraContext _localctx = new LeituraContext(Context, State);
		EnterRule(_localctx, 8, RULE_leitura);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(LEIA);
			State = 81;
			Match(ABRE_PAREN);
			State = 82;
			Match(ID);
			State = 83;
			Match(FECHA_PAREN);
			State = 84;
			Match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EscritaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ESCREVA() { return GetToken(LinguagemParser.ESCREVA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_PAREN() { return GetToken(LinguagemParser.ABRE_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_PAREN() { return GetToken(LinguagemParser.FECHA_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PONTO_VIRGULA() { return GetToken(LinguagemParser.PONTO_VIRGULA, 0); }
		public EscritaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_escrita; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterEscrita(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitEscrita(this);
		}
	}

	[RuleVersion(0)]
	public EscritaContext escrita() {
		EscritaContext _localctx = new EscritaContext(Context, State);
		EnterRule(_localctx, 10, RULE_escrita);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(ESCREVA);
			State = 87;
			Match(ABRE_PAREN);
			State = 88;
			expressao(0);
			State = 89;
			Match(FECHA_PAREN);
			State = 90;
			Match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecisaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SE() { return GetToken(LinguagemParser.SE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_PAREN() { return GetToken(LinguagemParser.ABRE_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_PAREN() { return GetToken(LinguagemParser.FECHA_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext[] bloco() {
			return GetRuleContexts<BlocoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco(int i) {
			return GetRuleContext<BlocoContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SENAO() { return GetToken(LinguagemParser.SENAO, 0); }
		public DecisaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decisao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterDecisao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitDecisao(this);
		}
	}

	[RuleVersion(0)]
	public DecisaoContext decisao() {
		DecisaoContext _localctx = new DecisaoContext(Context, State);
		EnterRule(_localctx, 12, RULE_decisao);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(SE);
			State = 93;
			Match(ABRE_PAREN);
			State = 94;
			expressao(0);
			State = 95;
			Match(FECHA_PAREN);
			State = 96;
			bloco();
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SENAO) {
				{
				State = 97;
				Match(SENAO);
				State = 98;
				bloco();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RepeticaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENQUANTO() { return GetToken(LinguagemParser.ENQUANTO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_PAREN() { return GetToken(LinguagemParser.ABRE_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_PAREN() { return GetToken(LinguagemParser.FECHA_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		public RepeticaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repeticao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterRepeticao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitRepeticao(this);
		}
	}

	[RuleVersion(0)]
	public RepeticaoContext repeticao() {
		RepeticaoContext _localctx = new RepeticaoContext(Context, State);
		EnterRule(_localctx, 14, RULE_repeticao);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(ENQUANTO);
			State = 102;
			Match(ABRE_PAREN);
			State = 103;
			expressao(0);
			State = 104;
			Match(FECHA_PAREN);
			State = 105;
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RetornoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RETURN() { return GetToken(LinguagemParser.RETURN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressaoContext expressao() {
			return GetRuleContext<ExpressaoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PONTO_VIRGULA() { return GetToken(LinguagemParser.PONTO_VIRGULA, 0); }
		public RetornoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_retorno; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterRetorno(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitRetorno(this);
		}
	}

	[RuleVersion(0)]
	public RetornoContext retorno() {
		RetornoContext _localctx = new RetornoContext(Context, State);
		EnterRule(_localctx, 16, RULE_retorno);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(RETURN);
			State = 108;
			expressao(0);
			State = 109;
			Match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncaoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LinguagemParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ABRE_PAREN() { return GetToken(LinguagemParser.ABRE_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FECHA_PAREN() { return GetToken(LinguagemParser.FECHA_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlocoContext bloco() {
			return GetRuleContext<BlocoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParametrosContext parametros() {
			return GetRuleContext<ParametrosContext>(0);
		}
		public FuncaoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcao; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.EnterFuncao(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinguagemListener typedListener = listener as ILinguagemListener;
			if (typedListener != null) typedListener.ExitFuncao(this);
		}
	}

	[RuleVersion(0)]
	public FuncaoContext funcao() {
		FuncaoContext _localctx = new FuncaoContext(Context, State);
		EnterRule(_localctx, 18, RULE_funcao);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			tipo();
			State = 112;
			Match(ID);
			State = 113;
